series stupid json fix

--- a/partials/thisseries-widget.hbs
+++ b/partials/thisseries-widget.hbs
@@ -24,7 +24,7 @@ $(document).ready(function() {
       url: endpoint,
       contentType: 'application/json'
     }).done(function(results) {
-      tag_loop(results);
+      tag_loop(results['posts']);
     });
   }
 
