--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -148,8 +148,7 @@ blockquote .language-python {
     }
 
     .meta {
-      color: rgba(255, 168, 168, 0.7294117647058823);
-      font-family: 'AFParseGroteskMono-Bold';
+      color: #e3dec8;
     }
 
     .addition,
@@ -508,8 +507,8 @@ blockquote .language-python {
   .language-css,
   .language-endpoint,
   .language-handlebars {
-    background: linear-gradient(#45415f,#252736) !important;
-    color: #96a7ff;
+    background: linear-gradient(#2d2947, #171924)!important;
+    color: #d0e1f6;
 
     .tag {
       color: #98bfd4;
