--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -116,8 +116,8 @@
 						</span>
 					</a>
 
-					<a href="https://github.com/toddbirchard/tableau-etl" class="github-card" data-github="toddbirchard/tableau-etl">
-						<h3 class="repo-title">link-embedder</h3>
+					<a href="https://github.com/toddbirchard/tableau-extract" class="github-card" data-github="toddbirchard/tableau-extract">
+						<h3 class="repo-title">tableau-extract</h3>
 						<p class="repo-description">A Flask application which extends Tableau to be used as an ETL tool.</p>
 						<span class="github-card__meta">
 							<span class="github-card__language-icon" style="color: #3572A5;">●</span> Python
