fixed series previews styles

--- a/custom-series-page.hbs
+++ b/custom-series-page.hbs
@@ -9,7 +9,7 @@
 			<div class=" main-content">
 				<!-- start post -->
 				{{#post}}
-					<article class="{{post_class}}">
+					<article class="{{post_class}} post-preview">
 						<div class="page-head">
 							<h1 class="page-title">{{{title}}}</h1>
 						</div>
