--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -134,6 +134,7 @@ blockquote .language-python {
   .python.hljs {
     color: #e4f8fd ;
     background: linear-gradient(#2d4467,#1c2a40);
+    font-family: 'AFParseGroteskMono-Regular';
 
     &::before {
       width: 110%;
