--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -39,6 +39,7 @@
 @import 'pages/projects-page.less';
 @import 'pages/python-page.less';
 @import 'pages/customtemplates.less';
+@import 'pages/series.less';
 
 /* Unknown */
 @import 'githubcard.less';
