fixed series previews styles

--- a/src/less/pages/series.less
+++ b/src/less/pages/series.less
@@ -161,7 +161,7 @@
           font-weight: 900;
           width: 100%;
           margin: 0 0 15px;
-
+          font-size: 1.3em;
 
           a {
             font-size: 1.15em;
