series preview styles

--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -666,7 +666,7 @@
 			margin-bottom: 17px;
 			line-height: 1.35;
 			padding: 0 0 10px;
-			font-family: 'Gilroy-Regular', sans-serif;
+			font-family: 'Gilroy-Medium' ,sans-serif;
 
 			.post-title,
 			.single-author-name {
