--- a/src/less/pages/series.less
+++ b/src/less/pages/series.less
@@ -97,6 +97,7 @@
     flex-direction: row;
     justify-content: space-between;
     margin-bottom: 20px;
+    box-shadow: 0 0 5px rgba(65,67,144,.15);
 
     .featured-media {
       margin: 0;
@@ -128,7 +129,7 @@
 
     .details {
       width: -webkit-fill-available;
-      padding: 20px;
+      padding: 15px 20px;
       @media(max-width: 800px) {
         max-width: -webkit-fill-available;
       }
@@ -164,11 +165,11 @@
           font-size: 1.3em;
 
           a {
-            font-size: 1.15em;
+            font-family: 'ProductSans-Medium','',sans-serif;
+            font-size: 1em;
             line-height: 1.3;
-              font-family: 'ProductSans-Regular','',sans-serif;
-              color: @text-color-heading;
-      				transition: all 0.2s ease-out;
+            color: @text-color-heading;
+      			transition: all 0.2s ease-out;
 
               &:hover {
       					color: @secondary-color;
