--- a/src/less/pages/author.less
+++ b/src/less/pages/author.less
@@ -229,6 +229,9 @@
 		.avatar {
 			float: none !important;
 			margin: 0 !important;
+			width: 80px;
+			height: 80px;
+			border: 1px solid #d2d2d2;
 
 			.meta-info {
 				   margin-right: 15px;
