changed repos to include hackers API

--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -76,9 +76,9 @@
 						</span>
 					</a>
 
-					<a href="https://github.com/toddbirchard/account-creation-endpoint" class="github-card" data-github="toddbirchard/account-creation-endpoint">
-						<h3 class="repo-title">account-creation-endpoint</h3>
-						<p class="repo-description">User account creation as a service. Handles Auth, mailing lists, analytics, and more.</p>
+					<a href="https://github.com/toddbirchard/hackersandslackers-api" class="github-card" data-github="toddbirchard/hackersandslackers-api">
+						<h3 class="repo-title">hackersandslackers-api</h3>
+						<p class="repo-description">Standalone API to handle account creation, auto-publish to medium, and sitewide link embeds.</p>
 						<span class="github-card__meta">
 							<span class="github-card__language-icon" style="color: #3572A5;">●</span> Python
 						</span>
