python resources updates

--- a/custom-python-reference.hbs
+++ b/custom-python-reference.hbs
@@ -46,7 +46,7 @@
     function python() {
       $.ajax({
         method: "GET",
-        url: "https://apisentris.com/api/v1/jira_python?select=issuetype_icon,summary,description,issuetype,updated&order_by=updated&issuetype=in.(Idea,Cheatsheet,Python Package)",
+        url: "https://apisentris.com/api/v1/jira_python?select=issuetype_icon,summary,description,issuetype,updated&order_by=updated",
         headers: {
           client_id: "115000",
           access_token: "qWLp79NWuDtVxom5v6_h_g"
