--- a/src/less/pages/tag-page.less
+++ b/src/less/pages/tag-page.less
@@ -16,6 +16,12 @@
       font-size: 3em;
     }
 
+    .post-permalink .btn {
+      @media(max-width: 600px) {
+        display:block !important;
+      }
+    }
+
     .post-content {
       @media(max-width: 900px) {
         margin: 25px 50px 0;
