--- a/src/less/pages/series.less
+++ b/src/less/pages/series.less
@@ -26,8 +26,9 @@
 
   .series-article-preview {
     @media(max-width:800px) {
-      height: 150px !important;
+      height: 100px !important;
       width: 100%;
+      margin-bottom: 15px !important;
     }
 
     &:hover {
@@ -132,6 +133,7 @@
       padding: 15px 20px;
       @media(max-width: 800px) {
         max-width: -webkit-fill-available;
+        padding: 10px 15px;
       }
 
       .meta {
@@ -165,15 +167,19 @@
           font-size: 1.3em;
 
           a {
-            font-family: 'ProductSans-Medium','',sans-serif;
+            font-family: 'ProductSans-Regular',sans-serif;
             font-size: 1em;
             line-height: 1.3;
             color: @text-color-heading;
-      			transition: all 0.2s ease-out;
+            transition: all 0.2s ease-out;
+            @media(max-width: 600px) {
+              font-family: 'ProductSans-Regular',sans-serif;
+              font-size: 0.75em;
+            }
 
-              &:hover {
-      					color: @secondary-color;
-      				}
+            &:hover {
+              color: @secondary-color;
+            }
           }
           @media(max-width: 600px) {
             width: -webkit-fill-available;
@@ -203,7 +209,6 @@
 
       .meta {
         padding: 0;
-
         @media(max-width: 600px) {
           display: none;
         }
@@ -221,19 +226,18 @@
         }
 
         .author {
-
           img {
             width: 30px;
             margin-right: 5px;
           }
 
           span {
-          text-transform: capitalize;
+            text-transform: capitalize;
+          }
         }
-      }
 
         .author-mobile {
-          display:none !important;
+          display: none !important;
         }
       }
     }
@@ -245,7 +249,7 @@
       background-size: cover;
       background-position: center;
       @media(max-width: 600px) {
-        height: 150px;
+        height: 100px;
         background-position-x: center;
         background-size: cover;
         max-width: -webkit-fill-available !important;
