--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -67,14 +67,14 @@
 	min-width: -webkit-fill-available;
 	min-width: -moz-available;
 
+	@media(max-width: 600px) {
+		margin-left: calc(~"-50vw + 50%") !important;
+		margin-right: calc(~"-50vw + 50%") !important;
+		margin-top: -19px;
+	}
 
 	h3 {
 		margin-bottom: 10px;
-	}
-
-	.avatar {
-		width: 100px;
-		height: 100px;
 	}
 
 	.meta-info {
