removed redis from less stack

--- a/partials/postpreview.hbs
+++ b/partials/postpreview.hbs
@@ -7,7 +7,7 @@
 
   {{#if feature_image}}
         <a href="{{url}}" class="featured-media">
-          <div class="post-card-image" style="background-image: url({{img_url feature_image}})"></div>
+          <div class="post-card-image" style="background-image: url({{img_url feature_image size="m"}})"></div>
         </a>
   {{/if}}
 
