--- a/post.hbs
+++ b/post.hbs
@@ -14,7 +14,7 @@
 						<h4 class="excerpt">{{excerpt}}</h4>
 						{{#if feature_image}}
 							<div class="featured-media">
-								<img src="{{img_url feature_image}}" alt="{{{title}}}" data-rjs="3">
+								<img src="{{img_url feature_image size="l"}}" alt="{{{title}}}" data-rjs="3">
 							</div>
 						{{/if}}
 
