--- a/src/less/global/postlist.less
+++ b/src/less/global/postlist.less
@@ -92,6 +92,10 @@
         bottom: 10px;
         padding-bottom: 10px;
 
+        @media(max-width: 800px) {
+          width: 90%;
+        }
+
         .btn {
           padding: 12px 20px;
           font-size: 16px;
