--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -604,6 +604,12 @@
 				font-size: 1em;
 			}
 
+			code {
+				font-family: 'AFParseGroteskMono-Regular;',sans-serif;
+				font-style: normal !important;
+				font-size: .9em !important;
+			}
+
 			a {
 				font-weight: 600 !important;
 			}
