--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -28,6 +28,7 @@
 @import 'posts/lightbox.less';
 @import 'posts/postfooter.less';
 @import 'posts/table.less';
+@import 'posts/galleries.less';
 @import 'posts/article-preview.less';
 
 /* Page Styles */
@@ -71,6 +72,7 @@
 		margin-left: calc(~"-50vw + 50%") !important;
 		margin-right: calc(~"-50vw + 50%") !important;
 		margin-top: -19px;
+		box-shadow: 0 0 5px rgba(65,67,144,.15);
 	}
 
 	h3 {
