--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -576,7 +576,7 @@
 		blockquote {
 			border-left: 4px solid #C9DEE2;
 			background: #e9f3f7;
-			color: #32687b;
+			color: #416e7d;
 			padding: 20px;
 			font-family: 'Gilroy-Medium',sans-serif;
 			font-style: italic;
@@ -585,8 +585,7 @@
 			overflow: hidden;
 			margin: 30px auto;
 			max-width: 88%;
-
-			border-radius: 3px;
+			border-radius: 5px;
 
 			& > p {
 				margin: 0 0 20px !important;
@@ -600,14 +599,14 @@
 				font-family: 'Gilroy-Medium',sans-serif;
 				font-weight: 500;
 				line-height: 1.6;
-				font-style: italic;
-				font-size: 1em;
+				font-size: .9em;
 			}
 
 			code {
 				font-family: 'AFParseGroteskMono-Regular;',sans-serif;
 				font-style: normal !important;
 				font-size: .9em !important;
+				background: rgba(41, 61, 76, 0.8) !important;
 			}
 
 			a {
