--- a/src/less/posts/redis3.css
+++ b/src/less/posts/redis3.css
@@ -128,6 +128,8 @@ nav .categories li {
 .strengths .columns .columns:hover {
   border-color: #B62411;
   font-weight: 700;
+  cursor: pointer;
+  background-color: #ead8d8;
 }
 .strengths .columns .columns:hover::after {
   content: url("https://hackers.nyc3.cdn.digitaloceanspaces.com/redis/arrow-right.png");
@@ -239,7 +241,6 @@ nav .categories li {
   background-color: white;
   -webkit-border-radius: 2px;
   border-radius: 2px;
-  margin-bottom: 10px;
   max-height: 90px;
   padding-left: 23px;
   padding-right: 23px;
@@ -249,6 +250,8 @@ nav .categories li {
   -ms-transition: all 350ms ease-in-out;
   -o-transition: all 350ms ease-in-out;
   transition: all 350ms ease-in-out;
+  max-width: 210px;
+  margin: 0 auto 10px;
 }
 @media (max-width: 800px) {
   .strengths .columns .columns {
@@ -366,6 +369,7 @@ nav .categories li {
   height: fit-content !important;
   margin: 0 !important;
   text-align: right !important;
+  font-size: .7em !important;
 }
 .strengths .columns.left .text {
   text-align: right;
@@ -400,19 +404,19 @@ nav .categories li {
   z-index: 30;
   padding: 30px 10px 0;
 }
-.item.hidden li {
+.item li {
   color: white;
-  line-height: 1.2;
-  font-size: .9em;
-  margin-bottom: 20px;
-  max-width: 90%;
+  line-height: 1.2 !important;
+  font-size: .9em !important;
+  margin-bottom: 20px !important;
+  max-width: 90% !important;
 }
-.item.hidden li::before {
-  color: white;
+.item li::before {
+  color: white !important;
 }
-.item.hidden img {
+.item img {
   max-width: 60px;
-  border: none;
+  border: none !important;
 }
 .item.hidden h3 {
   color: white;
