--- a/src/less/global/fonts.less
+++ b/src/less/global/fonts.less
@@ -1,4 +1,10 @@
 @import url("//hello.myfonts.net/count/385505");
+@import url("//hello.myfonts.net/count/38821c");
+
+
+@font-face {font-family: 'TTNorms-Bold';src: url('../../assets/fonts/38821C_0_0.eot');src: url('../../assets/fonts/38821C_0_0.eot?#iefix') format('embedded-opentype'),url('../../assets/fonts/38821C_0_0.woff2') format('woff2'),url('../../assets/fonts/38821C_0_0.woff') format('woff'),url('../../assets/fonts/38821C_0_0.ttf') format('truetype');}
+@font-face {font-family: 'TTNorms-Medium';src: url('../../assets/fonts/38821C_1_0.eot');src: url('../../assets/fonts/38821C_1_0.eot?#iefix') format('embedded-opentype'),url('../../assets/fonts/38821C_1_0.woff2') format('woff2'),url('../../assets/fonts/38821C_1_0.woff') format('woff'),url('../../assets/fonts/38821C_1_0.ttf') format('truetype');}
+@font-face {font-family: 'TTNorms-Regular';src: url('../../assets/fonts/38821C_2_0.eot');src: url('../../assets/fonts/38821C_2_0.eot?#iefix') format('embedded-opentype'),url('../../assets/fonts/38821C_2_0.woff2') format('woff2'),url('../../assets/fonts/38821C_2_0.woff') format('woff'),url('../../assets/fonts/38821C_2_0.ttf') format('truetype');}
 
 @font-face {font-family: 'Gilroy-SemiBold';src: url('../../assets/fonts/385505_0_0.eot');src: url('../../assets/fonts/385505_0_0.eot?#iefix') format('embedded-opentype'),url('../../assets/fonts/385505_0_0.woff2') format('woff2'),url('../../assets/fonts/385505_0_0.woff') format('woff'),url('../../assets/fonts/385505_0_0.ttf') format('truetype');}
 @font-face {font-family: 'Gilroy-Regular';src: url('../../assets/fonts/385505_1_0.eot');src: url('../../assets/fonts/385505_1_0.eot?#iefix') format('embedded-opentype'),url('../../assets/fonts/385505_1_0.woff2') format('woff2'),url('../../assets/fonts/385505_1_0.woff') format('woff'),url('../../assets/fonts/385505_1_0.ttf') format('truetype');}
