--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -1,5 +1,6 @@
 blockquote pre {
-   width: 92% !important;
+   width: 96% !important;
+   margin: 20px auto;
    margin:auto;
 }
 
@@ -134,7 +135,6 @@ blockquote .language-python {
   .python.hljs {
     color: #e4f8fd ;
     background: linear-gradient(#2d4467,#1c2a40);
-    font-family: 'AFParseGroteskMono-Regular';
 
     &::before {
       width: 110%;
@@ -149,7 +149,7 @@ blockquote .language-python {
     }
 
     .meta {
-      color: #e3dec8;
+      color: #ffdc5d;
     }
 
     .addition,
