--- a/src/less/global/global.less
+++ b/src/less/global/global.less
@@ -5,7 +5,7 @@
 ====================================================*/
 body,
 html {
-	font-family: 'Gilroy-Medium', sans-serif;
+	font-family: 'TTNorms-Regular', sans-serif;
 	font-size: 16px;
 	color: @text-color;
 	line-height: 1.75em;
@@ -27,13 +27,12 @@ header {
 }
 
 article {
-
 	p,
 	li {
 		line-height: 1.7em;
 		font-size: 16px;
 		font-display: block;
-		font-family: 'Gilroy-Medium';
+		font-family: 'TTNorms-Regular';
 	}
 }
 
@@ -43,8 +42,16 @@ section {
 }
 
 strong {
-  font-family: Gilroy-SemiBold;
+  font-family: 'TTNorms-Bold';
   font-weight: 500;
+}
+
+a {
+	font-family: 'TTNorms-Regular';
+
+	&:hover{
+		cursor: pointer;
+	}
 }
 
 .row {
