--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -116,9 +116,9 @@
 		margin: 40px 0 10px;
 		color: #276890;
 		line-height: 1.3;
-		font-family: 'ProductSans-Regular';
+		font-family: 'ProductSans-Light';
 		font-weight: 400!important;
-		font-size: 2em;
+		font-size: 1.7em;
 		width: fit-content;
 		/* text-align: left; */
 		padding-right: 10px;
@@ -147,7 +147,7 @@
 		margin-top: 50px;
 		color: @header-color;
 		margin-bottom: 12px;
-		font-family: 'Gilroy-SemiBold';
+		font-family: 'TTNorms-Medium';
 		@media(max-width: 800px) {
 			font-size: 1.3em;
 		}
@@ -504,7 +504,6 @@
 		}
 
 		p > a {
-			font-weight: 600;
 			letter-spacing: 0.5px;
 		}
 
@@ -579,7 +578,7 @@
 			color: #416e7d;
 			padding: 20px;
 			font-family: 'Gilroy-Medium',sans-serif;
-			font-style: italic;
+			font-style: none;
 			font-size: 1em;
 			line-height: 1.6;
 			overflow: hidden;
